packages/lodepng_flutter/lib/lodepng_flutter_bindings_generated.dart


  /// Iterate to next chunks, allows iterating through all chunks of the PNG file.
  /// Input must be at the beginning of a chunk (result of a previous lodepng_chunk_next call,
  /// or the 8th byte of a PNG file which always has the first chunk), or alternatively may
  /// point to the first byte of the PNG file (which is not a chunk but the magic header, the
  /// function will then skip over it and return the first real chunk).
  /// Will output pointer to the start of the next chunk, or at or beyond end of the file if there
  /// is no more chunk after this or possibly if the chunk is corrupt.
  /// Start this process at the 8th byte of the PNG file.
  /// In a non-corrupt PNG file, the last chunk should have name "IEND".
  ffi.Pointer<ffi.UnsignedChar> lodepng_chunk_next(
    ffi.Pointer<ffi.UnsignedChar> chunk,
    ffi.Pointer<ffi.UnsignedChar> end,
  ) {
    return _lodepng_chunk_next(
      chunk,
      end,
    );
  }

  late final _lodepng_chunk_nextPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.UnsignedChar> Function(ffi.Pointer<ffi.UnsignedChar>,
              ffi.Pointer<ffi.UnsignedChar>)>>('lodepng_chunk_next');
  late final _lodepng_chunk_next = _lodepng_chunk_nextPtr.asFunction<
      ffi.Pointer<ffi.UnsignedChar> Function(
          ffi.Pointer<ffi.UnsignedChar>, ffi.Pointer<ffi.UnsignedChar>)>();

  ffi.Pointer<ffi.UnsignedChar> lodepng_chunk_next_const(
    ffi.Pointer<ffi.UnsignedChar> chunk,
    ffi.Pointer<ffi.UnsignedChar> end,
  ) {
    return _lodepng_chunk_next_const(
      chunk,
      end,
    );
  }

  late final _lodepng_chunk_next_constPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.UnsignedChar> Function(ffi.Pointer<ffi.UnsignedChar>,
              ffi.Pointer<ffi.UnsignedChar>)>>('lodepng_chunk_next_const');
  late final _lodepng_chunk_next_const =
      _lodepng_chunk_next_constPtr.asFunction<
          ffi.Pointer<ffi.UnsignedChar> Function(
              ffi.Pointer<ffi.UnsignedChar>, ffi.Pointer<ffi.UnsignedChar>)>();

  /// Finds the first chunk with the given type in the range [chunk, end), or returns NULL if not found.
  ffi.Pointer<ffi.UnsignedChar> lodepng_chunk_find(
    ffi.Pointer<ffi.UnsignedChar> chunk,
    ffi.Pointer<ffi.UnsignedChar> end,
    ffi.Pointer<ffi.Char> type,
  ) {
    return _lodepng_chunk_find(
      chunk,
      end,
      type,
    );
  }

  late final _lodepng_chunk_findPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.UnsignedChar> Function(
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.Pointer<ffi.Char>)>>('lodepng_chunk_find');
  late final _lodepng_chunk_find = _lodepng_chunk_findPtr.asFunction<
      ffi.Pointer<ffi.UnsignedChar> Function(ffi.Pointer<ffi.UnsignedChar>,
          ffi.Pointer<ffi.UnsignedChar>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.UnsignedChar> lodepng_chunk_find_const(
    ffi.Pointer<ffi.UnsignedChar> chunk,
    ffi.Pointer<ffi.UnsignedChar> end,
    ffi.Pointer<ffi.Char> type,
  ) {
    return _lodepng_chunk_find_const(
      chunk,
      end,
      type,
    );
  }

  late final _lodepng_chunk_find_constPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.UnsignedChar> Function(
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.Pointer<ffi.Char>)>>('lodepng_chunk_find_const');
  late final _lodepng_chunk_find_const =
      _lodepng_chunk_find_constPtr.asFunction<
          ffi.Pointer<ffi.UnsignedChar> Function(ffi.Pointer<ffi.UnsignedChar>,
              ffi.Pointer<ffi.UnsignedChar>, ffi.Pointer<ffi.Char>)>();

  /// Appends chunk to the data in out. The given chunk should already have its chunk header.
  /// The out variable and outsize are updated to reflect the new reallocated buffer.
  /// Returns error code (0 if it went ok)
  int lodepng_chunk_append(
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out,
    ffi.Pointer<ffi.Size> outsize,
    ffi.Pointer<ffi.UnsignedChar> chunk,
  ) {
    return _lodepng_chunk_append(
      out,
      outsize,
      chunk,
    );
  }

  late final _lodepng_chunk_appendPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
              ffi.Pointer<ffi.Size>,
              ffi.Pointer<ffi.UnsignedChar>)>>('lodepng_chunk_append');
  late final _lodepng_chunk_append = _lodepng_chunk_appendPtr.asFunction<
      int Function(ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
          ffi.Pointer<ffi.Size>, ffi.Pointer<ffi.UnsignedChar>)>();

  /// Appends new chunk to out. The chunk to append is given by giving its length, type
  /// and data separately. The type is a 4-letter string.
  /// The out variable and outsize are updated to reflect the new reallocated buffer.
  /// Returne error code (0 if it went ok)
  int lodepng_chunk_create(
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out,
    ffi.Pointer<ffi.Size> outsize,
    int length,
    ffi.Pointer<ffi.Char> type,
    ffi.Pointer<ffi.UnsignedChar> data,
  ) {
    return _lodepng_chunk_create(
      out,
      outsize,
      length,
      type,
      data,
    );
  }

  late final _lodepng_chunk_createPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
              ffi.Pointer<ffi.Size>,
              ffi.Size,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.UnsignedChar>)>>('lodepng_chunk_create');
  late final _lodepng_chunk_create = _lodepng_chunk_createPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
          ffi.Pointer<ffi.Size>,
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.UnsignedChar>)>();

  /// Calculate CRC32 of buffer
  int lodepng_crc32(
    ffi.Pointer<ffi.UnsignedChar> buf,
    int len,
  ) {
    return _lodepng_crc32(
      buf,
      len,
    );
  }

  late final _lodepng_crc32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.UnsignedChar>, ffi.Size)>>('lodepng_crc32');
  late final _lodepng_crc32 = _lodepng_crc32Ptr
      .asFunction<int Function(ffi.Pointer<ffi.UnsignedChar>, int)>();

  /// Inflate a buffer. Inflate is the decompression step of deflate. Out buffer must be freed after use.
  int lodepng_inflate(
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out,
    ffi.Pointer<ffi.Size> outsize,
    ffi.Pointer<ffi.UnsignedChar> in1,
    int insize,
    ffi.Pointer<LodePNGDecompressSettings> settings,
  ) {
    return _lodepng_inflate(
      out,
      outsize,
      in1,
      insize,
      settings,
    );
  }

  late final _lodepng_inflatePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
              ffi.Pointer<ffi.Size>,
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.Size,
              ffi.Pointer<LodePNGDecompressSettings>)>>('lodepng_inflate');
  late final _lodepng_inflate = _lodepng_inflatePtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
          ffi.Pointer<ffi.Size>,
          ffi.Pointer<ffi.UnsignedChar>,
          int,
          ffi.Pointer<LodePNGDecompressSettings>)>();

  /// Decompresses Zlib data. Reallocates the out buffer and appends the data. The
  /// data must be according to the zlib specification.
  /// Either, *out must be NULL and *outsize must be 0, or, *out must be a valid
  /// buffer and *outsize its size in bytes. out must be freed by user after usage.
  int lodepng_zlib_decompress(
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out,
    ffi.Pointer<ffi.Size> outsize,
    ffi.Pointer<ffi.UnsignedChar> in1,
    int insize,
    ffi.Pointer<LodePNGDecompressSettings> settings,
  ) {
    return _lodepng_zlib_decompress(
      out,
      outsize,
      in1,
      insize,
      settings,
    );
  }

  late final _lodepng_zlib_decompressPtr = _lookup<
          ffi.NativeFunction<
              ffi.UnsignedInt Function(
                  ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
                  ffi.Pointer<ffi.Size>,
                  ffi.Pointer<ffi.UnsignedChar>,
                  ffi.Size,
                  ffi.Pointer<LodePNGDecompressSettings>)>>(
      'lodepng_zlib_decompress');
  late final _lodepng_zlib_decompress = _lodepng_zlib_decompressPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
          ffi.Pointer<ffi.Size>,
          ffi.Pointer<ffi.UnsignedChar>,
          int,
          ffi.Pointer<LodePNGDecompressSettings>)>();

  /// Compresses data with Zlib. Reallocates the out buffer and appends the data.
  /// Zlib adds a small header and trailer around the deflate data.
  /// The data is output in the format of the zlib specification.
  /// Either, *out must be NULL and *outsize must be 0, or, *out must be a valid
  /// buffer and *outsize its size in bytes. out must be freed by user after usage.
  int lodepng_zlib_compress(
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out,
    ffi.Pointer<ffi.Size> outsize,
    ffi.Pointer<ffi.UnsignedChar> in1,
    int insize,
    ffi.Pointer<LodePNGCompressSettings> settings,
  ) {
    return _lodepng_zlib_compress(
      out,
      outsize,
      in1,
      insize,
      settings,
    );
  }

  late final _lodepng_zlib_compressPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
              ffi.Pointer<ffi.Size>,
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.Size,
              ffi.Pointer<LodePNGCompressSettings>)>>('lodepng_zlib_compress');
  late final _lodepng_zlib_compress = _lodepng_zlib_compressPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
          ffi.Pointer<ffi.Size>,
          ffi.Pointer<ffi.UnsignedChar>,
          int,
          ffi.Pointer<LodePNGCompressSettings>)>();

  /// Find length-limited Huffman code for given frequencies. This function is in the
  /// public interface only for tests, it's used internally by lodepng_deflate.
  int lodepng_huffman_code_lengths(
    ffi.Pointer<ffi.UnsignedInt> lengths,
    ffi.Pointer<ffi.UnsignedInt> frequencies,
    int numcodes,
    int maxbitlen,
  ) {
    return _lodepng_huffman_code_lengths(
      lengths,
      frequencies,
      numcodes,
      maxbitlen,
    );
  }

  late final _lodepng_huffman_code_lengthsPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.UnsignedInt>,
              ffi.Pointer<ffi.UnsignedInt>,
              ffi.Size,
              ffi.UnsignedInt)>>('lodepng_huffman_code_lengths');
  late final _lodepng_huffman_code_lengths =
      _lodepng_huffman_code_lengthsPtr.asFunction<
          int Function(ffi.Pointer<ffi.UnsignedInt>,
              ffi.Pointer<ffi.UnsignedInt>, int, int)>();

  /// Compress a buffer with deflate. See RFC 1951. Out buffer must be freed after use.
  int lodepng_deflate(
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out,
    ffi.Pointer<ffi.Size> outsize,
    ffi.Pointer<ffi.UnsignedChar> in1,
    int insize,
    ffi.Pointer<LodePNGCompressSettings> settings,
  ) {
    return _lodepng_deflate(
      out,
      outsize,
      in1,
      insize,
      settings,
    );
  }
